<resources>
    <string name="app_name">Art Book</string>
    <string name="select_an_image">Select an Image</string>
    <string name="image">Image</string>
    <string name="art_name">Art Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="design_date_of_the_art">Design Date of the Art</string>
    <string name="save">SAVE</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="add_an_art">Add an Art</string>
</resources>